# pyrthomas

./: .gitignore  LICENSE  Pipfile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
examples/: dangue.py  hbp.py  mal.py  psudomonas.py
pyrthomas/: __init__.py  constants.py  cytoscape.py  models.py  network.py  network_analyser.py  tests.py  utils.py
